# chromedriver-auto-update

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
examples/: custom_args.rs  default_args.rs
local/: config.toml.example
src/: constant.rs  lib.rs  main.rs
src/utils/: config.rs
