[package]
name = "chromedriver-update"
version = "0.1.3"
authors = ["licht.cui <lichtcui@gmail.com>"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Ensure your Chromedriver remains up-to-date alongside your Chrome browser"
homepage = "https://github.com/lichtcui/chromedriver-auto-update"
repository = "https://github.com/lichtcui/chromedriver-auto-update"
readme = "README.md"
keywords = ["chromedriver"]

[lib]
name = "chromedriver_update"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.1"
