[package]
name = "chromedriver-update"
version = "0.2.0"
authors = ["licht.cui <lichtcui@gmail.com>"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Ensure your Chromedriver remains up-to-date alongside your Chrome browser"
homepage = "https://github.com/lichtcui/chromedriver-update"
repository = "https://github.com/lichtcui/chromedriver-update"
readme = "README.md"
keywords = ["chromedriver"]

[lib]
name = "chromedriver_update"
path = "src/lib.rs"

[[example]]
name = "default"
path = "examples/default_args.rs"

[[example]]
name = "custom"
path = "examples/custom_args.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
zip = "2.1"
